# lidwork

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md
lidwork/: __init__.py  app.py  cli.py  icons.py  state.py
lidwork/backends/: __init__.py  _win_helper.py  base.py  linux.py  macos.py  windows.py
packaging/: build.py  generate_icons.py  lidwork-macos.spec
