[build-system]
requires = ["setuptools>=61,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "lidwork"
version = "0.2.1"
description = "Tray toggle to keep a laptop running with the lid closed."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=11,<13",
  "pystray>=0.19.5,<0.20",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6,<7",
]

[project.scripts]
lidwork = "lidwork.cli:main"

[tool.setuptools.packages.find]
include = ["lidwork*"]

[tool.ruff]
target-version = "py311"
